--- a/docker/docker-compose-local.yml
+++ b/docker/docker-compose-local.yml
@@ -5,16 +5,16 @@ services:
     environment:
       - POSTGRES_PASSWORD=postgres
     volumes:
-      - /var/vol/blorg-prod/postgres/data:/var/lib/postgresql/data
+      - /var/vol/blorg-/postgres/data:/var/lib/postgresql/data
     deploy:
       replicas: 1
   web:
-    image: elixirelm/blorg:local
+    image: elixirelm/blorg:
     environment:
       - MIX_ENV=prod
       - PORT=4000
     command: mix phx.server
     ports:
-      - "80:4000"   #PROD
+      - "80:4000"   #NO_dev
     depends_on:
       - db
