--- a/docker/template-docker-compose.yml
+++ b/docker/template-docker-compose.yml
@@ -1,3 +1,4 @@
+# Author: umur.ozkul@gmail.com
 version: '3'
 services:
   db:
@@ -18,6 +19,6 @@ services:
     command: mix phx.server
     ports:
       - "4000:4000" #NO_prod#NO_local
-      - "80:4000"   #NO_dev
+      - "80:80"   #NO_dev
     depends_on:
       - db
